# Double-Pendulum-Simulation

./: .gitignore  generate_data.py  inference.py  interence.py  physics.py  pinn.py  pyproject.toml  train.py  training.ipynb  visualize.py
data/: dataset.py  generator.py
models/: pinn.py
physics/: equations.py  physics_loss.py
scripts/: inference.py  train.py  visualize.py
training/: losses.py  trainer.py
utils/: config.py  logging.py  seed.py
