[project]
name = "double-pendulum-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.1",
]
